Дополнена документация: добавлены LICENSE, CHANGELOG, улучшен README
- Добавлен файл LICENSE (MIT)
- Добавлен CHANGELOG.md с историей изменений
- Улучшен README.md с информацией о лицензии и вкладе
- Зафиксированы все изменения в структуре проекта

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,13 @@
 network-scanner
 network-scanner.exe
 network-scanner-*
+gui
+gui.exe
+gui-*
 
-# Release builds
-Release/
+# Build outputs
 dist/
+Release/
 
 # Go
 *.exe
