Добавлен GUI интерфейс с прокручиваемой областью результатов
- Создан GUI интерфейс на базе Fyne
- Исправлена проблема с прокруткой результатов сканирования
- Результаты теперь отображаются в прокручиваемом контейнере
- Добавлена возможность сохранения результатов в файл
- Исправлен .gitignore для корректной работы с GUI кодом

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 network-scanner
 network-scanner.exe
 network-scanner-*
-gui
-gui.exe
-gui-*
+network-scanner-gui
+network-scanner-gui.exe
+network-scanner-gui-*
 
 # Build outputs
 dist/
